常量版本